[package]
name = "openlv"
version = "0.0.3"
edition = "2024"
description = "a secure peer-to-peer wallet connectivity protocol"
license = "GPL-3.0"
documentation = "https://openlv.rs"
homepage = "https://openlv.rs"
repository = "https://github.com/open-lavatory/openlv-rs"

[lib]
name = "openlv"
path = "src/lib.rs"

[features]
default = ["alloy", "runtime-tokio"]
alloy = []
runtime-tokio = ["webrtc/runtime-tokio"]
runtime-smol = ["webrtc/runtime-smol"]

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
aead = "0.5"
x25519-dalek = { version = "2", features = ["static_secrets"] }
crypto_secretbox = { version = "0.1", features = ["salsa20"] }
url = "2"

serde = { version = "1.0", features = ["derive"] }
regex = "1"
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"

mqtt5 = "0.32"
webrtc = "0.20.0-alpha.2"

# todo: support for rustls-tls vs others via feature flags?
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# todo: make runtime agnostic via feature flags (runtime-tokio, runtime-smol)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

[[example]]
name = "client"
path = "../../examples/client/main.rs"

[[example]]
name = "dapp"
path = "../../examples/app/main.rs"

[dev-dependencies]
qrcode = { version = "0.14.1", default-features = false }
